--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-remark-responsive-iframe": "^5.18.0",
     "gatsby-remark-smartypants": "^5.18.0",
     "gatsby-source-filesystem": "^4.18.1",
+    "gatsby-source-instagram-all": "^5.2.1",
     "gatsby-transformer-remark": "^5.18.1",
     "gatsby-transformer-sharp": "^4.18.1",
     "js-yaml": "^4.1.0",
