--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby": "^4.18.2",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-feed": "^4.18.1",
+    "gatsby-plugin-image": "^2.24.0",
     "gatsby-plugin-layout": "^3.18.0",
     "gatsby-plugin-manifest": "^4.18.1",
     "gatsby-plugin-netlify": "^5.0.0",
