--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "gatsby-source-instagram-all": "^5.2.1",
     "gatsby-transformer-remark": "^5.18.1",
     "gatsby-transformer-sharp": "^4.18.1",
+    "grommet": "^2.7.1",
+    "grommet-icons": "^4.2.0",
     "js-yaml": "^4.1.0",
     "lodash.throttle": "^4.1.1",
     "normalize.css": "^8.0.1",
@@ -58,7 +60,14 @@
     "typeface-open-sans": "1.1.13",
     "typescript": "^4.7.4",
     "vanta": "^0.5.22",
-    "yaml-loader": "^0.8.0"
+    "yaml-loader": "^0.8.0",
+    "grommet": "^2.7.1",
+    "grommet-icons": "^4.2.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "rehype-react": "^3.0.2",
+    "styled-components": "^4.3.2"
   },
   "keywords": [
     "gatsby"
